--- a/day1/index.html
+++ b/day1/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown</title>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="hour"></p>
-    <p id="minute"></p>
-    <p id="second"></p>
+    <div class="wrapper">
+        <p id="hour"></p>
+        <p id="minute"></p>
+        <p id="second"></p>
+    </div>   
 </body>
 </html>
