--- a/day1/index.html
+++ b/day1/index.html
@@ -9,10 +9,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="wrapper">
-        <p id="hour"></p>
-        <p id="minute"></p>
-        <p id="second"></p>
+        <h1>Birthday</h1>
+        <div class="countdown">
+            <p id="hour"></p>
+            <p>:</p>
+            <p id="minute"></p>
+            <p>:</p>
+            <p id="second"></p>
+        </div>
+        
     </div>   
 </body>
 </html>
