--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -13,11 +13,14 @@
     <div class="wrapper">
         <h1>Birthday</h1>
         <div class="countdown">
+            <p id="day"></p>
+            <p>Days</p>
             <p id="hour"></p>
-            <p>:</p>
+            <p>hours</p>
             <p id="minute"></p>
-            <p>:</p>
+            <p>minutes</p>
             <p id="second"></p>
+            <p>seconds</p>
         </div>
         
     </div>   
