--- a/Counter/index.html
+++ b/Counter/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Counter</h1>
+    <p class="value">0</p>
+    <div>
+        <button class="btn decrease">decrease</button>
+        <button class="btn reset">reset</button>
+        <button class="btn increase">increase</button>
+    </div>
 </body>
 </html>
