--- a/reviews/index.html
+++ b/reviews/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <script src="./script.js" defer> </script>
 </head>
 <body>
     <section class="container">
@@ -21,10 +22,9 @@
                 <img id="image" src="./person-1.jpeg" alt="image">
             </div>
             <div class="review">
-                <h4 id="name">Sara jones</h4>
-                <p id="job">Web developer</p>
-                <p id="description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa quos atque magnam, temporibus alias reiciendis perferendis harum non! 
-                    Fugit distinctio nisi aperiam similique iure officia quis exercitationem nesciunt ex nam!
+                <h4 id="name"></h4>
+                <p id="job"></p>
+                <p id="description"> 
                 </p>
             </div>
             <div class="btn-container">
