--- a/navbar/index.html
+++ b/navbar/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <nav>
@@ -17,7 +18,7 @@
             <img src="./logo.svg" alt="logo">
             <button class="nav-toggle">
                 <i class="fas fa-bars"></i>
-              </button>
+            </button>
         </div>
         <ul class="menu">
             <li>
