--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -35,5 +35,8 @@
             </ul>
         </div>
     </nav>
+    <button class="btn">
+        <i class="fa-solid fa-x"></i>
+    </button>
 </body>
 </html>
