--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"     
     />
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <nav>
