--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"     
     />
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <nav>
