--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -15,7 +15,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <nav>
+    <nav class="show-sidebar">
         <div class="logo">
             <img src="./logo.svg" alt="logo">
         </div>
@@ -39,5 +39,8 @@
     <button class="btn">
         <i class="fa-solid fa-x"></i>
     </button>
+    <button class="sidebar-toggle">
+        <i class="fas fa-bars"></i>
+      </button>
 </body>
 </html>
