--- a/modal/index.html
+++ b/modal/index.html
@@ -7,8 +7,17 @@
     <title>Model</title>
 </head>
 <body>
-    <div>
-        
+    <header class="hero">
+        <div class="banner">
+            <h1>Modal Project</h1>
+            <button class="btn modal-btn">Open Modal</button>
+        </div>
+    </header>
+    <div class="modal-overlay">
+        <div class="modal-container">
+            <h3>Content</h3>
+            <button class="close-btn">Close Button</button>
+        </div>
     </div>
 </body>
 </html>
