--- a/modal/index.html
+++ b/modal/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Model</title>
-    <script src="./app.js"></script>
+    <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
     <div class="modal-overlay">
         <div class="modal-container">
             <h3>Content</h3>
-            <button class="close-btn">Close Button</button>
+            <button class="btn close-btn">Close Button</button>
         </div>
     </div>
 </body>
