--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -6,29 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Menu</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <h1>Menu</h1>
     <div class="menu">
-        <div>
-            <div class="image">
-                <img src="" alt="image">
-            </div>
-            <div class="item">
-                <h3>XXXXXX</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam accusamus omnis distinctio quam eius commodi dicta esse et nobis nam, labore dolore aut, dolores excepturi dolor eum aspernatur, aliquid deserunt!</p>
-            </div>
-        </div>
-        <div>
-            <div class="image">
-                <img src="" alt="image">
-            </div>
-            <div class="item">
-                <h3>XXXXXX</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam accusamus omnis distinctio quam eius commodi dicta esse et nobis nam, labore dolore aut, dolores excepturi dolor eum aspernatur, aliquid deserunt!</p>
-            </div>
-        </div>
+        
     </div>
 </body>
 </html>
