--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <h1>Menu</h1>
+    <div class="buttons">
+        <button>All</button>
+        <button>breakfeast</button>
+        <button>lunch</button>
+        <button>shakers</button>
+        <button>dinner</button>
+    </div>
     <div class="menu">
         
     </div>
