--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -11,14 +11,12 @@
 <body>
     <h1>Menu</h1>
     <div class="buttons">
-        <button>All</button>
-        <button>breakfeast</button>
-        <button>lunch</button>
-        <button>shakers</button>
-        <button>dinner</button>
+        <button class="btn-all">All</button>
+        <button class="btn-breakfast">breakfast</button>
+        <button class="btn-lunch">lunch</button>
+        <button class="btn-shakes">shakes</button>
     </div>
     <div class="menu">
-        
     </div>
 </body>
 </html>
