--- a/videoBackground/index.html
+++ b/videoBackground/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="back">
-        <video src="video.mp4" loop></video>
+        <video autoplay muted>
+            <source src="./video.mp4" type="video/mp4">
+        </video>
     </div>
 </body>
 </html>
