--- a/videoBackground/index.html
+++ b/videoBackground/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Background</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="back">
-        <video autoplay muted>
+        <video autoplay muted loop>
             <source src="./video.mp4" type="video/mp4">
         </video>
+        <h1>Video</h1>
+        <button class="btn">Pause</button>
     </div>
 </body>
 </html>
