--- a/videoBackground/index.html
+++ b/videoBackground/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Background</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="./script.js" defer></script>
-</head>
-<body>
-    <div class="back">
-        <video autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
-        </video>
-        <h1>Video</h1>
-        <button class="btn">Pause</button>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Video</title>
+
+    <!-- styles -->
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- preloader -->
+   
+    <!-- header -->
+    <header>
+      <video muted autoplay loop class="video-container">
+        <source src="./video.mp4" type="video/mp4" />
+      </video>
+      <h1>video project</h1>
+      <!-- video switch -->
+      <button class="switch-btn">
+        <span>
+          play
+        </span>
+        <span>
+          pause
+        </span>
+        <span class="switch"></span>
+      </button>
+    </header>
+    <!-- javascript -->
+    <script src="script.js"></script>
+  </body>
 </html>
