--- a/scroll/index.html
+++ b/scroll/index.html
@@ -12,6 +12,20 @@
             <div class="logo">
                 <img class="image-logo" src="./" alt="logo">
             </div>
+            <ul>
+                <li>
+                    <a href="#">home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">services</a>
+                </li>
+                <li>
+                    <a href="#">Tours</a>
+                </li>
+            </ul>
         </nav>
     </header>
 </body>
