--- a/scroll/index.html
+++ b/scroll/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img class="image-logo" src="./" alt="logo">
+                <img class="image-logo" src="./logo.svg" alt="logo">
             </div>
             <ul>
                 <li>
