--- a/scroll/index.html
+++ b/scroll/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroll</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -17,16 +18,41 @@
                     <a href="#">home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#">services</a>
+                    <a href="#services">services</a>
                 </li>
                 <li>
-                    <a href="#">Tours</a>
+                    <a href="#Tours">Tours</a>
                 </li>
             </ul>
         </nav>
+        <div class="banner">
+            <h1>scroll project</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas eos
+            neque sunt in? Id, necessitatibus quos quisquam distinctio
+            laudantium fugiat?
+          </p>
+          <a href="#tours" class="scroll-link btn btn-white">explore tours</a>
+        </div>
     </header>
+
+    <section id="about">
+        <div class="title">
+            <h2>About section</h2>
+        </div>
+    </section>
+    <section id="services">
+        <div class="title">
+            <h2>Services section</h2>
+        </div>
+    </section>
+    <section id="Tours">
+        <div class="title">
+            <h2>Tours section</h2>
+        </div>
+    </section>
 </body>
 </html>
