--- a/scroll/index.html
+++ b/scroll/index.html
@@ -6,14 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroll</title>
     <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
                 <img class="image-logo" src="./logo.svg" alt="logo">
+                <button class="nav-toggle">
+                    <i class="fas fa-bars"></i>
+                  </button>
             </div>
-            <ul>
+            <ul class="menu">
                 <li>
                     <a href="#">home</a>
                 </li>
