--- a/scroll/index.html
+++ b/scroll/index.html
@@ -15,52 +15,34 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <img class="image-logo" src="./logo.svg" alt="logo">
+            <div class="imageContainer">
+                <img src="./logo.svg" alt="logo">
                 <button class="nav-toggle">
                     <i class="fas fa-bars"></i>
-                  </button>
+                </button>
             </div>
-            <ul class="menu">
-                <li>
-                    <a href="#">home</a>
-                </li>
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="#services">services</a>
-                </li>
-                <li>
-                    <a href="#Tours">Tours</a>
-                </li>
-            </ul>
+            <div class="linksContainer">
+                <ul class="links">
+                    <li>
+                        <a href="#" class="link">home</a>
+                    </li>
+                    <li>
+                        <a href="#about" class="link">about</a>
+                    </li>
+                    <li>
+                        <a href="#services" class="link">services</a>
+                    </li>
+                    <li>
+                        <a href="#tours" class="link">tours</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <div class="banner">
-            <h1>scroll project</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas eos
-            neque sunt in? Id, necessitatibus quos quisquam distinctio
-            laudantium fugiat?
-          </p>
-          <a href="#tours" class="scroll-link btn btn-white">explore tours</a>
-        </div>
+        <section class="banner">
+            <h1>Project Title</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptatem similique corrupti quae a in, consequuntur excepturi atque? Necessitatibus corporis eos nam voluptate architecto saepe pariatur quia, voluptas quisquam adipisci?</p>
+            <p class="btn">Button</p>
+        </section>
     </header>
-
-    <section id="about">
-        <div class="title">
-            <h2>About section</h2>
-        </div>
-    </section>
-    <section id="services">
-        <div class="title">
-            <h2>Services section</h2>
-        </div>
-    </section>
-    <section id="Tours">
-        <div class="title">
-            <h2>Tours section</h2>
-        </div>
-    </section>
 </body>
 </html>
