--- a/scroll/index.html
+++ b/scroll/index.html
@@ -44,5 +44,14 @@
             <p class="btn">Button</p>
         </section>
     </header>
+    <section id="about">
+        <h1>About Section</h1>
+    </section>
+    <section id="services">
+        <h1>Services Section</h1>
+    </section>
+    <section id="tours">
+        <h1>Tours Section</h1>
+    </section>
 </body>
 </html>
