--- a/scroll/index.html
+++ b/scroll/index.html
@@ -24,7 +24,7 @@
             <div class="linksContainer">
                 <ul class="links">
                     <li>
-                        <a href="/" class="link">home</a>
+                        <a href="#home" class="link">home</a>
                     </li>
                     <li>
                         <a href="#about" class="link">about</a>
