--- a/scroll/index.html
+++ b/scroll/index.html
@@ -53,5 +53,8 @@
     <section id="tours">
         <h1>Tours Section</h1>
     </section>
+    <div class="top-link">
+        <button><i class="fas fa-arrow-up"></i></button>
+    </div>
 </body>
 </html>
