--- a/scroll/index.html
+++ b/scroll/index.html
@@ -53,8 +53,8 @@
     <section id="tours">
         <h1>Tours Section</h1>
     </section>
-    <div class="top-link show">
-        <button><i class="fas fa-arrow-up"></i></button>
+    <div class="top-link">
+        <button class="topbutton"><i class="fas fa-arrow-up"></i></button>
     </div>
 </body>
 </html>
