--- a/tabs/index.html
+++ b/tabs/index.html
@@ -5,10 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabs</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        
+        <h1>About</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis repellendus cum, sequi eveniet corporis facere ex minus officiis et earum deserunt ea porro? Dolores modi sapiente incidunt fugit aliquid neque?</p>
+        <div class="tabsContainer">
+            <img src="./hero-bcg.jpeg" alt="loho">
+            <div class="tabs">
+                <div class="btns">
+                    <button class="btn active">History</button>
+                    <button class="btn">Vision</button>
+                    <button class="btn">Goals</button>
+                </div>
+                <div class="history">
+                    <p><em>History</em></p>
+                    <p>
+                        I'm baby wolf pickled schlitz try-hard normcore marfa man bun
+                        mumblecore vice pop-up XOXO lomo kombucha glossier bicycle
+                        rights. Umami kinfolk salvia jean shorts offal venmo. Knausgaard
+                        tilde try-hard, woke fixie banjo man bun. Small batch tumeric
+                        mustache tbh wayfarers 8-bit shaman chartreuse tacos. Viral
+                        direct trade hoodie ugh chambray, craft beer pork belly flannel
+                        tacos single-origin coffee art party migas plaid pop-up.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
