--- a/tabs/index.html
+++ b/tabs/index.html
@@ -16,9 +16,9 @@
             <img src="./hero-bcg.jpeg" alt="loho">
             <div class="tabs">
                 <div class="btns">
-                    <button class="btn active">History</button>
-                    <button class="btn">Vision</button>
-                    <button class="btn">Goals</button>
+                    <button class="btn" data-id="history">History</button>
+                    <button class="btn" data-id="vision">Vision</button>
+                    <button class="btn" data-id="goals">Goals</button>
                 </div>
                 <div class="content" id="history">
                     <p><em>History</em></p>
