--- a/countdownClock/index.html
+++ b/countdownClock/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CountDown Clock</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <section class="gift-section">
+        <article class="gift-img">
+            <img src="./gift.jpeg" alt="gift image">
+        </article>
+        <article class="giftDescription">
+            <h3>Old iphone Giveaway</h3>
+            <h4>Giveaway Ends on friday,2 May 2020 11:30am</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora possimus optio quibusdam dolor commodi aut nam harum ducimus quasi? Asperiores suscipit quos, porro temporibus quaerat amet dignissimos aliquid cupiditate accusantium?</p>
+            <div class="countdown">
+                <div class="day_section">
+                    <h4 id="days"> </h4>
+                    <p>Days</p>
+                </div>
+                <div class="hour_section">
+                    <h4 id="hours"> </h4>
+                    <p>Hours</p>
+                </div>
+                <div class="minute_section">
+                    <h4 id="minutes"> </h4>
+                    <p>Minutes</p>
+                </div>
+                <div class="second_section">
+                    <h4 id="seconds"> </h4>
+                    <p>Seconds</p>
+                </div>
+            </div>
+        </article>
+    </section>
 </body>
 </html>
