--- a/lorem/index.html
+++ b/lorem/index.html
@@ -13,10 +13,10 @@
         <h1>Tired of Lorem Ipsum?</h1>
         <form>
             <label>Paragraph</label>
-            <input type="number" id="number"/>
+            <input type="number" id="number" required/>
             <input type="submit" value="submit">
         </form>
-        <div>
+        <div class="result">
             <p>Result :</p>
         </div>
     </section>
