--- a/grocery/index.html
+++ b/grocery/index.html
@@ -21,10 +21,10 @@
             <input type="text"  placeholder="e.g. eggs">
             <input type="submit" value="submit">
         </form>
-        <ul>
-            <li>
+        <ul class="items">
+            <li class="item">
                 <p>Bacon</p>
-                <div>
+                <div class="btn-container">
                     <button>
                         <i class="fas fa-edit"></i>
                     </button>
