--- a/grocery/index.html
+++ b/grocery/index.html
@@ -25,10 +25,10 @@
             <li class="item">
                 <p>Bacon</p>
                 <div class="btn-container">
-                    <button>
+                    <button class="editButton">
                         <i class="fas fa-edit"></i>
                     </button>
-                    <button>
+                    <button class="deleteButton">
                         <i class="fas fa-trash"></i>
                     </button>
                 </div>
