--- a/grocery/index.html
+++ b/grocery/index.html
@@ -18,7 +18,7 @@
     <div class="grocery">
         <h1>Grocery Bud</h1>
         <form>
-            <input type="text"  placeholder="e.g. eggs">
+            <input type="text"  placeholder="e.g. eggs" required="required">
             <input type="submit" value="submit">
         </form>
         <ul class="items">
