--- a/grocery/index.html
+++ b/grocery/index.html
@@ -18,9 +18,8 @@
     <div class="grocery">
         <h1>Grocery Bud</h1>
         <form>
-            <input type="text"  placeholder="e.g. eggs" required="required">
-            <input type="submit" value="submit">
-        </form>
+            <input type="text"  id="name" placeholder="e.g. eggs" required="required">
+            <input type="submit" value="submit" class="add">        </form>
         <ul class="items">
             <li class="item">
                 <p>Bacon</p>
@@ -34,7 +33,7 @@
                 </div>
             </li>
         </ul>
-        <h3>Clear Items</h3>
+        <h3 id="clear">Clear Items</h3>
     </div>
 </body>
 </html>
