--- a/slider/index.html
+++ b/slider/index.html
@@ -9,6 +9,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div class="slide-container">
+
+    </div>
 </body>
 </html>
