--- a/slider/index.html
+++ b/slider/index.html
@@ -10,7 +10,19 @@
 </head>
 <body>
     <div class="slide-container">
-
+        <div class="slide">
+            <img src="./img-1.jpeg" alt="image1">
+        </div>
+        <div class="slide">
+            <img src="./img-2.jpeg" alt="image2">
+        </div>
+        <div class="slide">
+            <img src="./person-1.jpeg" alt="image3">
+        </div>
+    </div>
+    <div class="btn-container">
+        <button class="prev">Prev</button>
+        <button class="next">Next</button>
     </div>
 </body>
 </html>
