--- a/cubeslider/index.html
+++ b/cubeslider/index.html
@@ -38,28 +38,8 @@
         <!-- If we need scrollbar -->
         <div class="swiper-scrollbar"></div>
   </div>
-  <script>
-      const swiper = new Swiper('.swiper', {
-        // Optional parameters
-        direction: 'horizontal',
-        slidesPerView:1,
-        loop:true,
-        // If we need pagination
-        pagination: {
-            el: '.swiper-pagination',
-        },
-
-        // Navigation arrows
-        navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
-        },
-
-        // And if we need scrollbar
-        scrollbar: {
-            el: '.swiper-scrollbar',
-        },
-        });
+  <script src="./script.js">
+      
   </script>
 </body>
 </html>
