--- a/calendar/index.html
+++ b/calendar/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="calendar_container">
         <div class="calendar">
-            
+            <h1 id="month_name"></h1>
         </div>
     </div>
 </body>
