--- a/calendar/index.html
+++ b/calendar/index.html
@@ -12,6 +12,9 @@
     <div class="calendar_container">
         <div class="calendar">
             <h1 id="month_name"></h1>
+            <div class="days">
+
+            </div>
         </div>
     </div>
 </body>
