--- a/calendar/index.html
+++ b/calendar/index.html
@@ -13,7 +13,15 @@
         <div class="calendar">
             <h1 id="month_name"></h1>
             <div class="days">
-
+                <div class="day_name">
+                    <p>Sunday</p>
+                    <p>Monday</p>
+                    <p>Tuesday</p>
+                    <p>Wednesday</p>
+                    <p>Thursady</p>
+                    <p>Friday</p>
+                    <p>Saturday</p>
+                </div>
             </div>
         </div>
     </div>
