--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="./script.js" defer></script>
     <title>Calendar</title>
 </head>
 <body>
     <div class="calendar_container">
         <div class="calendar">
-            <h1 id="month_name"></h1>
+            <div class="calendar_banner">
+                <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                <h1 id="month_name"></h1>
+                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </div>
             <div class="day_name">
                 <p>Sunday</p>
                 <p>Monday</p>
