--- a/calendar/index.html
+++ b/calendar/index.html
@@ -13,9 +13,9 @@
     <div class="calendar_container">
         <div class="calendar">
             <div class="calendar_banner">
-                <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                <i class="fa fa-chevron-left" aria-hidden="true" class="prev"></i>
                 <h1 id="month_name"></h1>
-                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                <i class="fa fa-chevron-right" aria-hidden="true" class="next"></i>
             </div>
             <div class="day_name">
                 <p>Sunday</p>
