--- a/calendar/index.html
+++ b/calendar/index.html
@@ -17,18 +17,19 @@
                 <h1 id="month_name"></h1>
                 <i class="fa fa-chevron-right" aria-hidden="true" class="next"></i>
             </div>
-            <div class="day_name">
-                <p>Sunday</p>
-                <p>Monday</p>
-                <p>Tuesday</p>
-                <p>Wednesday</p>
-                <p>Thursady</p>
-                <p>Friday</p>
-                <p>Saturday</p>
-            </div>
-            <div class="days">
-                
-            </div>
+            <div class="main">
+                <div class="day_name">
+                    <p>Sunday</p>
+                    <p>Monday</p>
+                    <p>Tuesday</p>
+                    <p>Wednesday</p>
+                    <p>Thursady</p>
+                    <p>Friday</p>
+                    <p>Saturday</p>
+                </div>
+                <div class="days">
+                    
+                </div>
             </div>
         </div>
     </div>
