--- a/PDFgenerator/index.html
+++ b/PDFgenerator/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF generator</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
     <script src="./script.js" defer></script>
 </head>
 <body>
     <button onclick="generate()"> click</button>
-</body>
+X</body>
+
+
 </html>
